--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -20,6 +20,11 @@
         <!-- Sidebar Menu -->
         <nav class = "mt-2">
             <ul class = "nav nav-pills nav-sidebar flex-column" data-accordion = "false" data-widget = "treeview" role = "menu">
+                <li class = "nav-item">
+                    <a class = "nav-link" href = "/">
+                        <i class = "fa-solid fa-house"></i> &nbsp; <p>Home</p>
+                    </a>
+                </li>
                 <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
                 <li class = "nav-item menu-open">
                     <a class = "nav-link" href = "#">
