--- a/src/main/resources/templates/add-outbound.html
+++ b/src/main/resources/templates/add-outbound.html
@@ -65,8 +65,6 @@
                                         <hr>
 
                                         <div th:if = "${outboundDetails != null && !outboundDetails.isEmpty() && outboundDTO.id != null}">
-                                            <div th:replace = "~{fragments/searchForm :: searchForm('/outbound/' + ${outboundDTO.id})}"></div>
-
                                             <div class = "table-responsive">
                                                 <table class = "table table-hover table-bordered text-center">
                                                     <thead class = "thead-light">
@@ -84,7 +82,7 @@
                                                         <th scope = "col">
                                                             <div th:replace = "~{fragments/sortBtn :: sortBtn('outbound/' + ${outboundDTO.id}, ${order != '' && order != null ? order : ''}, 'status', ${orderBy}, 'Status')}"></div>
                                                         </th>
-                                                        <th class = "col-1" scope = "col">Actions</th>
+                                                        <th class = "col-2" scope = "col">Actions</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -95,8 +93,14 @@
                                                         <td th:text = "${outboundDetail.quantity}"></td>
                                                         <td th:text = "${outboundDetail.status}"></td>
                                                         <td>
-                                                            <a class = "btn btn-primary fa-regular fa-pen-to-square icon-dark" th:href = "@{'/outbound/' + ${outboundDTO.id} + '/details/' + ${outboundDetail.id}}" title = "Edit"></a>
-                                                            <a class = "btn btn-danger fa-regular fa-trash-can icon-dark" data-bs-target = "#deleteModal" data-bs-toggle = "modal" onclick = "openDeleteModal(event, this.href)" th:href = "@{'/outbound/' + ${outboundDTO.id} + '/details/delete/' + ${outboundDetail.id}}" title = "Delete"></a>
+                                                            <a class = "btn btn-primary" th:href = "@{'/outbound/' + ${outboundDTO.id} + '/details/' + ${outboundDetail.id}}" title = "Edit">
+                                                                <i class = "fa-regular fa-pen-to-square icon-dark"></i>
+                                                                Edit
+                                                            </a>
+                                                            <a class = "btn btn-danger" data-bs-target = "#deleteModal" data-bs-toggle = "modal" onclick = "openDeleteModal(event, this.href)" th:href = "@{'/outbound/' + ${outboundDTO.id} + '/details/delete/' + ${outboundDetail.id}}" title = "Delete">
+                                                                <i class = "fa-regular fa-trash-can icon-dark"></i>
+                                                                Delete
+                                                            </a>
                                                         </td>
                                                     </tr>
                                                     </tbody>
