--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -26,13 +26,12 @@
         </li>
         <li class = "nav-item" sec:authorize = "isAuthenticated()">
             <form action = "/logout" class = "mb-0" method = "post">
-                <input th:name = "${_csrf.parameterName}" th:value = "${_csrf.token}" type = "hidden">
+                <input name = "${_csrf.parameterName}" type = "hidden" value = "${_csrf.token}">
                 <button class = "btn btn-danger" type = "submit">Logout</button>
             </form>
         </li>
         <li class = "nav-item" sec:authorize = "!isAuthenticated()">
-            <button class = "btn btn-success" type = "submit">
-                <a class = "text-white" href = "/login">Login</a></button>
+            <a class = "btn btn-success text-white" href = "/login">Login</a>
         </li>
     </ul>
 </nav>
